<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhang.helloworld.MainActivity">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/message_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:hint="@string/message_hint"/>
        <Button android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:onClick="sendMessage"/>
        <Button android:id="@+id/btn_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text"/>
    </LinearLayout>

    <Button android:id="@+id/intent_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_test_intent"/>
    <Button android:id="@+id/baidu_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_test_baidu"/>
    <Button android:id="@+id/http_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_test_http"/>
    <Button android:id="@+id/intent_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent_http"/>
    <Button android:id="@+id/back_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_intent"/>
    <Button android:id="@+id/btn_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_mode"/>
</LinearLayout>
